--- a/src/front_end/w3_edited.css
+++ b/src/front_end/w3_edited.css
@@ -414,6 +414,21 @@ input[type=checkbox].w3-check:disabled+.w3-validate,input[type=radio].w3-radio:d
       display: inline-block;
       transition: 0.4s;
     }
+    buttonGrey.accordion {
+      background-color: #D3D3D3; /* Grey */
+      color: white;
+      cursor: pointer;
+      padding: 15px 32px;
+      width: 100%;
+      border: 1px solid white;
+      border-left: none;
+      border-right: none;
+      text-align: left;
+      outline: none;
+      font-size: 15px;
+      display: inline-block;
+      transition: 0.4s;
+    }
     buttonYellow:hover {
       background-color: #ffaf00;
     }
