--- a/src/front_end/w3_edited.css
+++ b/src/front_end/w3_edited.css
@@ -438,6 +438,9 @@ input[type=checkbox].w3-check:disabled+.w3-validate,input[type=radio].w3-radio:d
     buttonGreen:hover {
       background-color: #006600;
     }
+    buttonGrey:hover {
+      background-color: #A3A3A3;
+    }
     button.accordion.active, button.accordion:hover {
       background-color: #ddd;
     }
