--- a/src/front_end/w3_edited.css
+++ b/src/front_end/w3_edited.css
@@ -400,7 +400,7 @@ input[type=checkbox].w3-check:disabled+.w3-validate,input[type=radio].w3-radio:d
       transition: 0.4s;
     }
     buttonRed.accordion {
-      background-color: #f44336; /* Red */
+      background-color: #e84c3d; /* Red */
       color: white;
       cursor: pointer;
       padding: 15px 32px;
@@ -497,8 +497,9 @@ input[type=checkbox].w3-check:disabled+.w3-validate,input[type=radio].w3-radio:d
       cursor: pointer;
       padding: 0px;
       width: 100%;
+      height: 50px;
       border: none;
-      text-align: left;
+      text-align: center;
       outline: none;
       font-size: 15px;
       transition: 0.4s;
@@ -507,13 +508,13 @@ input[type=checkbox].w3-check:disabled+.w3-validate,input[type=radio].w3-radio:d
 
     .container {
       width: 100%;
-      height: 100%;
+      height: 60px;
       margin: 0 auto 0;
     }
 
     .pulse-button {
       position: relative;
-      width: 200px;
+      width: 100%;
       height: 50px;
       border: none;
       box-shadow: 0 0 0 0 rgba(232, 76, 61, 0.7);
@@ -523,15 +524,15 @@ input[type=checkbox].w3-check:disabled+.w3-validate,input[type=radio].w3-radio:d
       background-size:cover;
       background-repeat: no-repeat;
       cursor: pointer;
-      -webkit-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-      -moz-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-      -ms-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-      animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+      -webkit-animation: pulse 2.25s infinite cubic-bezier(0.66, 0, 0, 1);
+      -moz-animation: pulse 2.25s infinite cubic-bezier(0.66, 0, 0, 1);
+      -ms-animation: pulse 2.25s infinite cubic-bezier(0.66, 0, 0, 1);
+      animation: pulse 2.25s infinite cubic-bezier(0.66, 0, 0, 1);
     }
 
     .no-pulse-button {
       position: relative;
-      width: 200px;
+      width: 100%;
       height: 50px;
       border: none;
       box-shadow: 0 0 0 0 rgba(232, 76, 61, 0.7);
